bench/sensitive/critical/evidence/d5ecfee068ac14b3fc803ec22169e60972879d47_20260113-094654/logs/fuzz_runner.log
AUDIT_META runner=fuzz commit=d5ecfee068ac14b3fc803ec22169e60972879d47 mode=critical seed=8675309 limits=MAX_BLOCK_ITEMS:10000,MAX_RLE_RUN:2000
=== FUZZ SUITE (Time-Boxed) ===
Starting fuzzing for 20000ms...
[AUDIT] Run 0: mode=RANDOM seed=14014
FAIL: Crash at seed 14014. Code=1 C:\Users\shilo\Documents\GitHub\Gred-In-Compression-System\bench\sensitive\critical\fuzz_worker.ts:1
import { GICSv2Encoder, GICSv2Decoder, IntegrityError, IncompleteDataError, GicsError } from '../../../src/index.js';
                                                                            ^

SyntaxError: The requested module '../../../src/index.js' does not provide an export named 'GicsError'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.18.0

Result: 1 Runs, 0 PASSED, 1 FAILED
AUDIT_RESULT runner=fuzz status=FAIL exit_code=1 duration_ms=2345 runs=1
Fuzz Suite FAILED
